--- a/css/price.css
+++ b/css/price.css
@@ -125,6 +125,7 @@ header h2 {
 /* Pricing Section Styles */
 .pricing-section {
     background-color: rgba(255, 255, 255, 0.2);/* Semi-transparent background*/
+    background: url(/images/prices.png);
     padding: 40px;
     border-radius: 10px;
     margin-bottom: 50px;
@@ -137,13 +138,15 @@ header h2 {
 }
 
 .pricing-feature {
-    background-color: #F39200;
-    border-radius: 10px;
-    padding: 30px;
-    flex: 1 1 200px; /* Flexbox basis for responsiveness */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    text-align: center;
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  background: linear-gradient(to bottom right, #F5A623, #F39200); /* Gradient shading */
+  border-radius: 10px;
+  padding: 30px;
+  flex: 1 1 200px; /* Flexbox basis for responsiveness */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), /* Main shadow */
+              inset 0 2px 4px rgba(255, 255, 255, 0.2), /* Light inner shadow for 3D effect */
+              inset 0 -2px 6px rgba(0, 0, 0, 0.2); /* Darker inner shadow for 3D effect */
+  text-align: center;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 .pricing-feature:hover {
